--- a/style.css
+++ b/style.css
@@ -71,3 +71,59 @@ button:hover {
     background-color: rgba(255, 255, 255, 0.3);
     animation: bounce 0.4s ease-in-out;
 }
+
+.result-container {
+    margin-top: 20px;
+    margin-bottom: 10px;
+    min-height: 48px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.result {
+    font-size: 2rem;
+    font-weight: bold;
+    text-shadow: 2px 2px 8px rgba(0,0,0,0.2);
+}
+
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    background-color: rgb(82, 87, 86);
+    color: #fff;
+    text-align: center;
+    padding: 20px 0 10px 0;
+    z-index: 1000;
+    box-shadow: 0 2px 12px rgba(0,0,0,0.15);
+    backdrop-filter: blur(4px);
+}
+
+header h1 {
+    font-size: 2rem;
+    font-family: cursive;
+    margin-bottom: 10px;
+    letter-spacing: 14px;
+}
+
+header .rules {
+    font-size: 1.1rem;
+    margin-bottom: 16px;
+}
+
+header .score-header {
+    font-size: 1.2rem;
+    font-weight: bold;
+
+}
+
+#play-again-button {
+    margin-top: 15px;
+    padding: 20px;
+    color: #000000;
+    font-size: 1.1rem;
+    font-weight: bold;
+}
